--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ Proyecto de formateador aritmético
 
 ---
 ## 🚀 ¡Probá la aplicación en vivo!
-Hacé clic [aquí](TU_URL_DE_STREAMLIT) para ver el Formateador Aritmético en acción.
+Hacé clic [https://formateador-aritmetico-de-cris.streamlit.app/] para ver el Formateador Aritmético en acción.
 ---
 
 Los alumnos de primaria suelen organizar los problemas aritméticos verticalmente para facilitar su resolución. Por ejemplo, "235 + 52" se convierte en:
